--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
             <i class="fa-solid fa-file-pdf"></i>
           </button>
           <!-- Secondary pay button up top (optional, still functional) -->
-          <a class="icon-btn" href="#" aria-label="Pay Now" title="Pay Now">
+          <a class="icon-btn" href="https://kakatbarilea-prog.github.io/segwik-invoice-check-out" aria-label="Pay Now" title="Pay Now">
             <i class="fa-solid fa-arrow-right"></i>
           </a>
         </div>
