--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
               </div>
 
               <!-- Pay Now button required -->
-              <a class="pay-now" href="#" aria-label="Pay Now">
+              <a class="pay-now" href="https://kakatbarilea-prog.github.io/segwik-invoice-check-out" aria-label="Pay Now">
                 <i class="fa-solid fa-bolt"></i>
                 Pay Now
               </a>
